# Mosaic

./: .gitignore  1.main.py  2.intention_predict.py  3.speech_detection.py  gesture.py  requirements.txt  run.sh
high_level/: action_test.py  service_test_with_code.py
high_level/src/VLM_agent/: agent.py
high_level/src/execute/: actions.py
high_level/src/intention/: intention_predict.py
high_level/src/mistral_ai/: mistral.py
high_level/src/mistral_ai/prompts/: plan_prompt.py
high_level/src/mistral_ai/scripts/: llm_script.json  llm_script.txt  vlm_script.json
high_level/src/pixel_world/: pixel_and_world.py
high_level/src/transcribe/: transcription.txt
manipulation_ws/: commands.md  example_camera.py  example_grasp.py  example_ik_forward_inverse.py  example_motion.py  example_point_cloud.py  pose.yaml  startup.launch.py
manipulation_ws/src/action/: CMakeLists.txt  package.xml  setup.py
manipulation_ws/src/action/action/: add.py  close.py  grasp.py  image_saver.py  move.py  move_cartesian.py  move_service_default.py  open.py  reset.py  return_back.py  stir.py
manipulation_ws/src/action/launch/: mosaic_launch.py
manipulation_ws/src/action_interfaces/: CMakeLists.txt  package.xml
manipulation_ws/src/action_interfaces/srv/: Add.srv  Grasp.srv  Move.srv  Stir.srv  (+1 more)
src/VLM_agent/: OwlViT_FastSAM_SAM.py  agent.py
src/execute/: actions.py
src/mistral_ai/: mistral.py
src/mistral_ai/prompts/: plan_prompt.py
src/mistral_ai/scripts/: llm_script.json  llm_script.txt  vlm_script.json  vlm_script.txt
src/transcribe/: stt.py  transcription.txt  tts.py
