<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mosaic@todo.todo">mosaic</maintainer>
  <license>TODO: License declaration</license>
  
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <exec_depend>action_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
